# project_game

./: .gitignore  CMakeLists.txt  main.cpp  output.txt
assets/dialogs/: npc-1.json  npc-2.json
assets/location1/: location1.tmx
assets/location2/: location2.tmx
assets/location3/: boss-1-defeated.json  boss-1.json  location3.tmx
assets/location4/: location4.tmx
assets/location5/: location5.tmx
assets/map/tmx/: location1.tmx  location2.tmx  location4.tmx  location5.tmx
assets/maps/: location1.tmx  location2.tmx  location3.tmx
src/: game_state.py  main.cpp  main.py
src/battle/: battle_system.py  math_problem.py
src/bosses/: boss1.py
src/core/: audio_manager.py  constants.py  game.py  state_machine.py
src/entities/: player.py
src/states/: battle.py  exploring.py  exploring_dialogue.py  main_menu.py  pause_menu.py  transition_location.py
src/ui/: hud.py
src/utils/: file_finder.py
src/world/: camera.py  map_renderer.py
